# midterm-exam-Rubit-IO

./: .travis.yml  CMakeLists.txt
01-question/: CMakeLists.txt  evaluation.cpp  evaluation.h  main.cpp
02-question/: CMakeLists.txt  factorial.cpp  factorial.h  main.cpp
03-question/: CMakeLists.txt  dive.cpp  dive.h  main.cpp
04-question/: CMakeLists.txt  dive_log.cpp  dive_log.h  main.cpp
05-question/: animal.h  cat.h  dog.h  main.cpp
test-cases/: CMakeLists.txt  test_cases.cpp
